k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-httpbin
  labels:
    app.kubernetes.io/name: app-httpbin
