k8s/httpbin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: app-httpbin
  labels:
    app: httpbin
spec:
  selector:
    app: httpbin
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
