k8s/ingress-internal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin-internal
  namespace: app-httpbin
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: internal
  rules:
    - http:
        paths:
          - path: /post
            pathType: Prefix
            backend:
              service:
                name: httpbin
                port:
                  number: 80
          - path: /put
            pathType: Prefix
            backend:
              service:
                name: httpbin
                port:
                  number: 80
