k8s/ingress-public.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin-public
  namespace: app-httpbin
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "1m"
spec:
  ingressClassName: public
  rules:
    - http:
        paths:
          - path: /get
            pathType: Prefix
            backend:
              service:
                name: httpbin
                port:
                  number: 80
